update package.json and package-lock.json

--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "displayName": "Typegoose sort",
   "description": "A tool for sorting typegoose models",
   "version": "0.0.1",
+  "publisher": "JJW-27",
   "engines": {
-    "vscode": ">=1.90.0"
+    "vscode": ">=1.95.0"
   },
   "categories": [
     "Other"
