--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "A tool for sorting typegoose models",
   "version": "0.0.2",
   "publisher": "JW-extensions",
+  "repository": {
+    "url": "https://github.com/JJW-27/typegoose-sort.git"
+  },
   "engines": {
     "vscode": ">=1.95.0"
   },
